2007-03-28  Stefan Jahn  <stefan@lkcc.org>

	* digi_source.cpp (verilogCode): Ensured that register name
	of each digital source is unique.

	* d_flipflop.cpp (verilogCode): Fixed Verilog code of
	D-flipflop.  Is working now, can be used as template for
	other flipflops.

2007-03-26  Stefan Jahn  <stefan@lkcc.org>

	* digi_sim.cpp (Digi_Sim): Can select between VHDL and Verilog
	netlist format.

	* component.cpp (get_Verilog_Code): Gate components and digital
	sources now working with Verilog HDL.

2007-03-25  Stefan Jahn  <stefan@lkcc.org>

	* component.cpp (verilogHDL_Code): New virtual function which
	is used to produce Verilog HDL code.

	* d_flipflop.cpp (verilogHDL_Code): Added the first Verilog HDL
	code.  Provided by Ozgur.

2007-03-06  Stefan Jahn  <stefan@lkcc.org>

	* twistedpair.cpp (TwistedPair): Added some new properties
	necessary for the loss and noise models.

2007-02-04  Stefan Jahn  <stefan@lkcc.org>

	* mscross.cpp (MScross): Added microstrip model selectors
	to the properties of the microstrip cross.

2006-10-29  Stefan Jahn  <stefan@lkcc.org>

	* hicumL2p1.h (class hicumL2p1): Added HICUM L2 v2.1 model.

	* HBT_X.h (class HBT_X): Added FBH HBT device model.

2006-09-24  Stefan Jahn  <stefan@lkcc.org>

	* tr_sim.cpp (TR_Sim): Added 'MaxStep' property.

2006-09-03  Stefan Jahn  <stefan@lkcc.org>

	* opt_sim.cpp (createASCOFiles): Fixed a bug occuring when
	trying to use ASCO on Win32.

2006-08-30  Stefan Jahn  <stefan@lkcc.org>

	* opt_sim.cpp (loadASCOout): Evaluate output file of ASCO and
	puts final values into initial values of the component.
	(createASCOnetlist): Modifies netlist for use with ASCO.

2006-08-21  Stefan Jahn  <stefan@lkcc.org>

	* opt_sim.cpp (createASCOFiles): Moved this function here from
	the optimization dialog.  Netlist creation fixed.  Properties
	are saves properly now (translation independent).

	* optimizedialog.cpp (OptimizeDialog): Improved and finished
	the dialog for now.
